# PyCorrCPI

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
Examples/: Thiophenone Covariance Analysis Example - Simulated Data.ipynb  Thiophenone Covariance Analysis Example May 24 - Simulated Data.ipynb
PyCorrCPI/: covariance.py  data.py  helpers_numba.py  output_functions.py
PyCorrCPI.egg-info/: PKG-INFO
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: PyCorrCPI.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  PyCorrCPI.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/PyCorrCPI/: covariance.html  data.html  helpers_numba.html  output_functions.html
docs/_build/html/_sources/: PyCorrCPI.rst.txt
