[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCorrCPI"
version = "0.1.3"
description = "PyCorrCPI - correlation analysis for charged-particle imaging experiments"
authors = [
    {name = "Felix Allum", email = "felix.allum@desy.de"}
]
keywords = ["Coincidence", "Covariance", "Cumulant", "Velocity-map Imaging"]
dependencies = [
    "numpy>=1.0.0",
    "matplotlib>=1.0.0",
    "pandas>=1.0.0",
    "numba>=0.42.0",
    'typing; python_version < "3.8"',
]
# Optional: URLs section for the project
[project.urls]
homepage = "https://github.com/f-allum/PyCorrCPI/"
# download = "https://github.com/f-allum/PyCorrCPI/archive/refs/tags/v0.1.2.tar.gz"

# Ruff configuration
[tool.ruff]
# Linting settings
line-length = 120  # Max line length
select = ["E", "F", "W"]  # Enable specific rule codes (E: pycodestyle, F: pyflakes, W: warnings)
ignore = []  # No rules to ignore for now
exclude = ["tests/*", "docs/*"]  # Exclude directories
# Enable autofix capabilities for common linting issues
fix = true

# Optional: Define specific rule configurations
[tool.ruff.per-file-ignores]
"tests/test_*.py" = ["F401"]  # Ignore unused imports (F401) for test files

[tool.setuptools]
packages=['PyCorrCPI']